[workspace]
members = ["artifactarium-proc-macro"]
exclude = ["reliquary-codegen"]

[package]
name = "artifactarium"
version = "1.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
etherparse = "0.16.0"
kcp = "0.5.3"
protobuf = "3.6.0"
rand_mt = "4.2.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
artifactarium-proc-macro = { path = "artifactarium-proc-macro" }
rsa = "0.9.6"
